@@ -1,3 +1,7 @@
+2003-06-12	ujwal
+
+    * Created VT100TextStorage class subclassing NSTextStorage.
+
 2003-06-11	ujwal
 
     * Using embedded FreeMono font for graphical characters 
